--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ display: -webkit-box;
 display: -webkit-box;
 display: -moz-box;
 display: -ms-flexbox;
-display: -webkit-flex;display:none;
+display: -webkit-flex;
 }
 .post-title-portfolio a {
 	color: black;
@@ -112,15 +112,17 @@ display: -webkit-flex;display:none;
 div.light_rounded .pp_next {
 	background: url(../images/next.png) center right no-repeat !important;
 	cursor: pointer;width:50px !important;display: block;
-	height: 100%;
+	height: 32px;
 }
 a.pp_previous {
-	background: url(../images/prev.png) 10000px 10000px no-repeat !important;
+	background: url(../images/prev.png) !important;
 	display: block;
 	float: left;
-	height: 100%;
+	height: 32px;
 	text-indent: 0 !important;
 	width: 50px !important;
+	background-repeat: no-repeat !important;
+	font-size: 0;
 }
 div.light_rounded .pp_next:hover {
 	background:none;
