--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body{font: 12px/1.5em Arial, Helvetica, sans-serif, "Arial Narrow";color:#a5a5a5
 .portfolio-content, .portfolio-area{width:1080px;}
 .title-page{font-size:40px;margin:50px 0px 60px 0px;color:#47CD51;font-weight:bold;text-align:center;}
 .goto{float:right;width:130px;margin:-80px 30px 0px 0px;}
-
+a{text-decoration:none;}
 /**** PORTFOLIO STYLES*****/
 .portfolio-categ{margin-bottom:30px;text-align:center;}
 .portfolio-categ li{display:inline;margin-right:10px;}
@@ -50,25 +50,15 @@ div.light_rounded .pp_top .pp_middle, div.light_rounded .pp_bottom .pp_middle, d
 	background: none !important;
 }
 div.light_rounded .pp_content_container .pp_left, div.light_rounded 
-.pp_content_container .pp_right{background:rgba(71, 205, 81, 0.54) !important;padding:30px !important;
-    border:transparent;box-shadow: none;}
+.pp_content_container .pp_right{background:white !important;padding:30px !important;
+    border:1px solid transparent;box-shadow: 0 0 5px transparent;}
 div.light_rounded .pp_top .pp_right, div.light_rounded .pp_top .pp_left, div.light_rounded .pp_bottom .pp_left,
  div.light_rounded .pp_bottom .pp_right {
 	background: none !important;
 }
 div.light_rounded .pp_content_container .pp_left:hover, div.light_rounded 
-.pp_content_container .pp_right:hover{border: 1px solid #47CD51;
+.pp_content_container .pp_right:hover{border: 1px solid #47CD51;box-shadow: 0 0 5px #47CD51;
 }
-/* .home-portfolio-text{display:none;}
-.home-portfolio-text:hover {
-	margin-top: 0;display:block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: rgba(71, 205, 81, 0.54);
-	width: 100%;
-	height: 100%;
-} */
 .portfolio-item2 .home-portfolio-text {
 	width: 100%;
 	height: 200px;
@@ -97,6 +87,25 @@ display: -moz-box;
 display: -ms-flexbox;
 display: -webkit-flex;
 }
+.pp_content_container .pp_details {
+	float: left;
+	margin: 0 1%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	-webkit-align-items: center;
+	-webkit-align-content: center;
+	-moz-box-pack: center;
+	-moz-box-align: center;
+	display: -webkit-box;
+	-webkit-box-pack: center;
+	-webkit-box-align: center;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+}
 .post-title-portfolio a {
 	color: black;
 	font-weight: bold;
@@ -112,26 +121,69 @@ display: -webkit-flex;
 div.light_rounded .pp_next {
 	background: url(../images/next.png) center right no-repeat !important;
 	cursor: pointer;width:50px !important;display: block;
-	height: 32px;
+	height: 32px !important;
+	top: 50%;
+position: absolute;
+right: -30%;
+}
+.pp_previous.disabled {
+	visibility: visible !important;
 }
 a.pp_previous {
 	background: url(../images/prev.png) !important;
 	display: block;
 	float: left;
-	height: 32px;
+	height: 32px !important;
 	text-indent: 0 !important;
 	width: 50px !important;
 	background-repeat: no-repeat !important;
 	font-size: 0;
+	top: 50%;
+position: absolute;
+left: -30%;
 }
 div.light_rounded .pp_next:hover {
 	background:none;
 	cursor: pointer;
 }
 .pp_details.clearfix p {
-	color: white;
+	color: black;
 	font-size: 20px;
 }
+.pp_fade {
+	height: 100% !important;
+}
+.pp_description span {
+	margin-top: 20px;
+	display: block;
+	font-size: 16px;
+}
+.date a, .comments a {
+	color: #47CD51;
+	font-size: 16px;
+}
+.date, .comments {
+	padding-left: 30px;
+}
+.date:before{position:absolute;content:"";
+	background-image:url("../images/calendar\(1\).png");left: 0;background-repeat: no-repeat;
+	top: 0;
+	display: block;
+	height: 24px;
+	width: 24px;}
+.comments:before{position:absolute;content:"";
+	background-image:url("../images/comment.png");left: 0;background-repeat: no-repeat;
+	top: 0;
+	display: block;
+	height: 24px;
+	width: 24px;}
+.description-ul {
+	display: flex;margin-top:20px;
+}
+.description-ul li {
+	margin-right: 10px;position:relative;
+}
+.description-ul li{font-size:16px;}
 .pp_nav {
 	display: none !important;
 }
@@ -140,10 +192,10 @@ div.light_rounded .pp_next:hover {
 	width: 48%;
 	margin: 0 1%;
 	position: relative;
-	z-index: 99;
+	z-index: 99;height: 100%;
 }
 .pp_hoverContainer {
-	height: 300px !important;
+	height: 100% !important;
 	width: 100% !important;
 }
 .pp_details.clearfix {
@@ -155,62 +207,4 @@ div.light_rounded .pp_next:hover {
 	height: 100% !important;
 }
 
-/* .home-portfolio-text {
-	width: 90%;
-	height: 90%;
-	position: absolute;
-	top: 5%;
-	left: 5%;
-}
-
-/* .image-block::after {
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	background: rgba(71, 205, 81, 0.54);
-	height: 100%;
-	width: 100%;
-} */
-/* .home-portfolio-text::before {
-	border-bottom: 3px solid #47CD51;
-	border-top: 3px solid #47CD51;
-	transform: scale(0,1);
-	transform-origin: 0 0 0;
-}
-.home-portfolio-text::after {
-	border-left: 3px solid #47CD51;
-	border-right: 3px solid #47CD51;
-	transform: scale(1,0);
-	transform-origin: 100% 0 0;
-}
-.home-portfolio-text::after, .home-portfolio-text::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	opacity: 0;
-	transition: all .7s ease 0s;
-}
-.post-title-portfolio {
-	font-size: 21px;
-	font-weight: 700;
-	color: #fff;
-	margin: 15px 0;
-	opacity: 0;
-	transform: translate3d(0,-50px,0);
-	transition: transform .5s ease 0s;
-}
-.home-portfolio-text:hover .post-title-portfolio {
-	opacity: 1;
-	transform: translate3d(0,0,0);
-}
-.home-portfolio-text:hover::after, .home-portfolio-text:hover::before {
-	opacity: 1;
-	transform: scale(1);
-	transition-delay: .15s;
-} */
- 
 /**** END PORTFOLIO STYLES*****/
